# pytest-cmake

./: .gitignore  .readthedocs.yml  .versup.json  README.md  build_backend.py  build_config.py  pyproject.toml  setup.py
.github/actions/install-boost/: action.yml
.github/actions/install-boost-python/: action.yml
.github/workflows/: docs-deploy.yml  pypi_release.yml  release.yml  test.yml
cmake/: FindPytest.cmake  PytestAddTests.cmake
doc/: api_reference.rst  conf.py  environment_variables.rst  getting_started.rst  glossary.rst  index.rst  installing.rst  integration.rst  introduction.rst  tutorial.rst
doc/_extensions/: changelog.py  github_user.py
doc/_static/: style.css
doc/release/: migration_notes.rst  release_notes.rst
example/: CMakeLists.txt
example/src/: CMakeLists.txt  main.cpp
example/src/foo/: CMakeLists.txt  foo.cpp  foo.h
example/src/python/: CMakeLists.txt  main.cpp
example/test/: CMakeLists.txt  fooTest.cpp  test_example.py
example/test/resource/: foo.txt
example/test/subfolder/: test_example2.py
src/pytest_cmake/: __main__.py
test/: CMakeLists.txt
test/01-modify-name/: CMakeLists.txt  compare_discovered_tests.cmake  test_math_operations.py
test/01-modify-name/data/: conftest.py  test_sample_data.py
test/01-modify-name/strings/: test_string_methods.py
test/02-library-path/: CMakeLists.txt  test_path.py
test/03-python-path/: CMakeLists.txt  test_path.py
test/04-environment/: CMakeLists.txt  test_env.py
test/05-properties/: CMakeLists.txt  check_test_property.cmake
test/06-extra-args/: CMakeLists.txt  conftest.py  test_args.py  test_extra_args.py
test/06-extra-args/custom_args/: test_custom_args.py
test/06-pytest-args/: CMakeLists.txt  test_basic.py  test_extra_args.py
test/07-working-directory/: CMakeLists.txt
test/08-test-paths/: CMakeLists.txt  pytest.ini  test_incorrect.py
test/08-test-paths/test_a/: choice.py  test_upper.py
test/08-test-paths/test_b/: test_concat.py
test/08-test-paths/test_b/math/: test_power.py  test_subtract.py
