[build-system]
requires = [
    "hatchling >= 1.4; python_version >= '3'",
    "setuptools >= 44; python_version < '3'",
    "cmake >= 3.20, < 3.31"
]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "pytest-cmake"
version = "0.10.0"
description = "Provide CMake module for Pytest"
readme = "README.md"
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4"
license = {file = "LICENSE"}
keywords = ["cmake", "pytest", "development"]
authors = [
    {name = "Jeremy Retailleau", email = "jeremy.retailleau@gmail.com" }
]
dependencies = [
    "pytest >= 4, < 9",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Documentation = "https://python-cmake.github.io/pytest-cmake"
Repository = "https://github.com/python-cmake/pytest-cmake"
Issues = "https://github.com/python-cmake/pytest-cmake/issues"
Changelog = "https://python-cmake.github.io/pytest-cmake/release/release_notes.html"

[tool.hatch.build.hooks.custom]
require-runtime-dependencies = true
path = "build_config.py"

[tool.hatch.build.targets.wheel.shared-data]
"build/PytestConfig.cmake" = "share/Pytest/cmake/PytestConfig.cmake"
"build/PytestConfigVersion.cmake" = "share/Pytest/cmake/PytestConfigVersion.cmake"
"cmake/FindPytest.cmake" = "share/Pytest/cmake/FindPytest.cmake"
"cmake/PytestAddTests.cmake" = "share/Pytest/cmake/PytestAddTests.cmake"

[tool.hatch.build.targets.wheel]
only-include = ["*.cmake"]

[tool.hatch.build.targets.sdist]
only-include = ["cmake", "build_config.py", "build_backend.py", "setup.py"]
